# cm_examples

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  install.sh
.devcontainer/: devcontainer.json
arm_cfft/: CMakeLists.txt  arm_cfft.cc
arm_fCWT/: CMakeLists.txt  arm_fCWT.cc  fCWT.py  fcwt.cc  fcwt.cpp  fcwt.h  main.cpp  main.h  plot_ftm.py  plot_wvl.py  serial_ftm.py  tfm.txt  tmp.txt  wavelet.txt
arm_fft/: CMakeLists.txt  arm_fft.cc
audio_scoppy/: CMakeLists.txt  audio_client.py
conv_cwt/: CMakeLists.txt  conv_cwt.cc  load_csv.py  plot_cwt.py  plot_ftm.py
convolution/: CMakeLists.txt  convolution.cc
correlate/: CMakeLists.txt  correlate.cc
cwt/: CMakeLists.txt  chirp.h  chirp.py  cwt.cc  cwt.h  cwt_fw.cc  dac_timer.cc  serial_chr.py  serialplot1.py
cwt/test/: CMakeLists.txt  imshow.cc  plot_cwt.cc  plot_power_cwt.cc  plot_wavelet.cc  test_cwt.cc  test_wavelet.cc
dac_out/: CMakeLists.txt  chirp.cc  chirp.h  correlation.cc  correlation.h  dac_out.cc  dac_timer.cc  dac_timer.h  phase_zero.py  serialplot3.py  splot.h  wavelet.cc  wavelet.h
generator/: CMakeLists.txt  argparse_gen.py  args.yaml  back_generator.py  gen_ui.py  generator_cm4.cc  generator_cm7.cc  generator_m7.cc  generator_message.h  helper.py  params.py  pt_test.py  ui_gen.ui
lib/arm_fCWT/: CMakeLists.txt  fcwt.cc  fcwt.h
lib/base/: CMakeLists.txt  main_freertos_m7_nocam.cc
lib/hamming/: hamming.h
lib/lib_fCWT/: CMakeLists.txt  fcwt.h
lib/lib_fft/: CMakeLists.txt
lib/m7_DSP/: CMakeLists.txt
mic_kissfft/: CMakeLists.txt  hamming.cpp  mic_kissfft.cc  splot_fft.py  test_signal.h  test_signal.py
pffft/: CMakeLists.txt  pffft.cc
simple_fft_test/: CMakeLists.txt  fft.py  simple_fft_test.cc
timer_interrupt/: CMakeLists.txt  timer_interrupt.cc
twotonetest/: CMakeLists.txt  twotonetest.cc
xCount/: CMakeLists.txt  xCount.cc
